<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ustsitemap.ustinteractivemap.MainBuilding"
    android:background="@drawable/titlescreenbg">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/mainbuildingtext"
        android:layout_marginBottom="10dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MainBuilding"
                android:id="@+id/textView1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MainBuilding2"
                android:id="@+id/textView2"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/colleges"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="123dp"
                android:id="@+id/imageView4"
                android:layout_below="@+id/imageView3"
                android:layout_alignRight="@+id/imageView3"
                android:layout_alignEnd="@+id/imageView3"
                android:src="@drawable/law"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="123dp"
                android:id="@+id/imageView5"
                android:src="@drawable/pharmacy"
                android:layout_above="@+id/textView4"
                android:layout_toRightOf="@+id/textView3"
                android:layout_marginLeft="40dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="123dp"
                android:id="@+id/imageView6"
                android:src="@drawable/science"
                android:layout_below="@+id/textView4"
                android:layout_alignLeft="@+id/imageView4"
                android:layout_alignStart="@+id/imageView4"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Law"
                android:id="@+id/textView4"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/imageView4"
                android:layout_alignLeft="@+id/imageView4"
                android:layout_alignStart="@+id/imageView4"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pharmacy"
                android:id="@+id/textView5"
                android:layout_above="@+id/imageView6"
                android:layout_toRightOf="@+id/imageView6"
                android:layout_marginLeft="36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Science"
                android:id="@+id/textView3"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/imageView6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
